--- a/src/app/books/book.component.html
+++ b/src/app/books/book.component.html
@@ -13,6 +13,13 @@
       </div>
     </div>
   </div>
+  <!-- spinnner element is  
+    defined with id loading -->
+<div class="d-flex justify-content-center"> 
+  <div class="spinner-border" role="status"> 
+      <span  *ngIf="isLoading" class="" id="loading"></span> 
+  </div> 
+</div> 
   <table mdbTable class="z-depth-1 table table-striped table-bordered" style="margin-top: 15px;">
     <thead>
       <tr>
