--- a/src/app/books/book.component.css
+++ b/src/app/books/book.component.css
@@ -1,7 +1,7 @@
-#loading{ 
+/* #loading{ 
     position: absolute; 
     left: 50%; 
-    top: 50%; 
+    top: 60%; 
     z-index: 1; 
     width: 150px; 
     height: 150px; 
@@ -17,4 +17,4 @@
     @keyframes spin { 
       0% { transform: rotate(0deg); } 
       100% { transform: rotate(360deg); } 
-    }
+    } */
