--- a/src/app/books/book.component.html
+++ b/src/app/books/book.component.html
@@ -1,38 +1,38 @@
-<div class="container">
-  <div class="row">
-    <div class="col-md-12 mx-auto">
-      <div class="md-form">
-        <input
-          type="text"
-          [(ngModel)]="filterstring"
-          class="form-control"
-          id="search"
-          placeholder="Serach by Name/Author"
-          mdbInput
-        />
-      </div>
-    </div>
-  </div>
-  <!-- spinnner element is  
-    defined with id loading -->
-<div class="d-flex justify-content-center"> 
-  <div class="spinner-border" role="status"> 
-      <span  *ngIf="isLoading" class="" id="loading"></span> 
-  </div> 
-</div> 
-  <table mdbTable class="z-depth-1 table table-striped table-bordered" style="margin-top: 15px;">
-    <thead>
-      <tr>
-        <th scope='col'>Name</th>
-        <th scope='col'>Author</th>
-        <th scope='col'>Status</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let book of books | bookFilter:filterstring;let i = index">
-        <td>{{book.bookName}}</td>
+<div class="container content"> 
+<div class="input-group col-md-4">
+  <input class="form-control py-2" type="search" value="search"  [(ngModel)]="filterstring"
+  class="form-control"
+  id="search"
+  placeholder="Serach by Name/Author">
+  <span class="input-group-append">
+    <button class="btn btn-outline-secondary" type="button">
+        <i class="fa fa-search"></i>
+    </button>
+  </span>
+</div>
+<table class="table table-striped">
+  <thead>
+  <tr>
+    <th scope="col">#</th>
+    <th scope='col'>Name</th>
+    <th scope='col'>Author</th>
+    <th scope='col'>Status</th>
+  </tr>
+  </thead>
+  <tbody>
+  <tr *ngFor="let book of books | bookFilter:filterstring;let i = index">
+    <th scope="row">{{ i + 1 }}</th>
+    <td>{{book.bookName}}</td>
         <td>{{book.author}}</td>
         <td>{{book.status}}</td>
-    </tbody>
-  </table>
+  </tr>
+  </tbody>
+</table>
+
+<div class="d-flex justify-content-center"> 
+  <div *ngIf="isLoading" class="" id="loading" class="spinner-border" role="status"> 
+  </div> 
+</div> 
 </div>
+
+
